# python-json

./: leetcode.py  requirements.txt
connect4/: Des  index.py  test_sol.py
data-test/: README.md  pipeline.py
data-test/XYZ Marketing Data Pipeline/: Dockerfile  Senior Full Stack- Interview Task Data.xlsx  pipeline.ipynb  requirements.txt
data-test/XYZ Marketing Data Pipeline/exports/: XYZ-products-2023-07-25.parquet
data-test/exports/: XYZ-customers-2023-07-25.parquet  XYZ-top-customers-2023-07-25.csv  XYZ-top-customers-2023-07-25.parquet  XYZ-transactions-2023-07-25.parquet
django-api/: pyproject.toml
django-api/common/: admin.py  data.py  models.py  serializers.py  urls.py  views.py
django-api/common/migrations/: 0001_initial.py
django-api/config/: settings.py  urls.py
json-sort/: results.py
markdown-parse/: example.md  parse.py  test_parser.py
prevalical/: README.md  calculate.py  counting.py  printer.py  test_calculate.py
prevalical/example_data/sub/: do_not_read_me.danger
rebalancing/: rebalancing.md  rebalancing.py
trint/: connect_four.py  game_of_life.py
word-statistics/: README.md  calculate.py  counting.py  files.py  index.py  printer.py  test_calculate.py  text_stats.py
